fix formatting overflow on very small devices

--- a/src/css/GithubMeta.module.scss
+++ b/src/css/GithubMeta.module.scss
@@ -31,3 +31,10 @@
     grid-column: unset;
   }
 }
+
+@media screen and (max-width: 350px) {
+  .githubMeta {
+    grid-template-columns: 1fr;
+    column-gap: 0;
+  }
+}
