--- a/src/css/Project.module.scss
+++ b/src/css/Project.module.scss
@@ -57,9 +57,11 @@
 @media screen and (max-width: 700px) {
   .projectContainer {
     grid-template-columns: 1fr;
+    font-size: 0.9em;
 
     .image {
       width: 100%;
+      // margin: 0 auto;
     }
 
     .linksWrapper {
